--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -58,7 +58,7 @@
         .incorrect {
             border-color: red;
         }
-        
+
         /* Estilos do modal de conclusão */
         #overlay {
             position: fixed;
@@ -215,7 +215,7 @@
                     // Show modal and update database
                     if (completedWords === activities.length) {
                         showCompletionModal();
-                        updateProgressInDatabase(); // Atualiza o progresso no banco de dados
+                        updateProgressInDatabase(); // Update database when all words are completed
                     }
                 }
             });
@@ -242,17 +242,14 @@
     function updateProgressInDatabase() {
         const currentPhase = getPhaseFromURL();
         const { level, unit } = getLevelAndUnitFromURL();
-        const userId = getCurrentUserId(); // Função para obter o ID do usuário logado
-
+        const userId = getCurrentUserId(); // Assume this function gets the current user ID
         const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
         if (currentPhase === "last") {
             const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-            // Criar a nova unidade na mesma level
-            firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+            dbRef.child(nextUnit).set({ fase1: true });
         } else if (currentPhase === "end") {
             const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-            // Criar um novo level e adicionar Unit1
             firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             dbRef.update({ [`fase${currentPhase}`]: true });
