--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -58,6 +58,33 @@
         .incorrect {
             border-color: red;
         }
+        .word-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .letter-animation {
+            font-size: 80px; /* Tamanho da letra da animação */
+            color: #32CD32; /* Cor da letra da animação */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: grow-shrink 1s ease-in-out;
+            display: none;
+            font-family: 'Times New Roman', Times, serif; /* Fonte da animação */
+        }
+        @keyframes grow-shrink {
+            0% {
+                transform: translate(-50%, -50%) scale(0);
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.5);
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
 
         /* Estilos do modal de conclusão */
         #overlay {
@@ -257,12 +284,13 @@
         const currentPhase = getPhaseFromURL();
         const { level, unit } = getLevelAndUnitFromURL();
         const userId = getCurrentUserId(); // Função para obter o ID do usuário logado
+
         const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
         if (currentPhase === "last") {
             const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
             // Criar a nova unidade na mesma level
-            dbRef.child(nextUnit).set({ fase1: true });
+            firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
         } else if (currentPhase === "end") {
             const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
             // Criar um novo level e adicionar Unit1
