--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -248,7 +248,6 @@
                         completedWords++;
 
                         if (completedWords === activities.length) {
-                            updateProgressInDatabase();
                             showCompletionModal();
                         }
                     } else {
@@ -271,6 +270,7 @@
     }
 
     function showCompletionModal() {
+        updateProgressInDatabase(); // Chama a atualização do banco de dados
         document.getElementById('overlay').style.display = 'block';
         document.getElementById('completion-modal').style.display = 'block';
     }
