--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -291,6 +291,7 @@
                 const userId = user.uid;
                 const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
+                // Verifica se a fase atual é uma palavra (last ou end)
                 if (currentPhase === "last") {
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                     dbRef.child(nextUnit).set({ fase1: true });
