--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -294,9 +294,11 @@
                 // Verifica se a fase atual é uma palavra (last ou end)
                 if (currentPhase === "last") {
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    dbRef.child(nextUnit).set({ fase1: true });
+                    // Criar a nova unidade na mesma Level
+                    dbRef.parent.child(nextUnit).set({ fase1: true });
                 } else if (currentPhase === "end") {
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    // Criar um novo level e adicionar Unit1
                     firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
                 } else {
                     dbRef.update({ [`fase${currentPhase}`]: true });
