--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -301,9 +301,13 @@
                     // Criar um novo level e adicionar Unit1
                     firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
                 } else {
-                    dbRef.update({ [`fase${currentPhase}`]: true });
-                    const nextPhase = parseInt(currentPhase) + 1;
-                    dbRef.update({ [`fase${nextPhase}`]: true });
+                    // Verifica se a fase atual é um número
+                    const phaseNumber = parseInt(currentPhase);
+                    if (!isNaN(phaseNumber)) {
+                        dbRef.update({ [`fase${currentPhase}`]: true });
+                        const nextPhase = phaseNumber + 1; // Incrementa a fase
+                        dbRef.update({ [`fase${nextPhase}`]: true });
+                    }
                 }
             } else {
                 console.error("Usuário não autenticado");
