--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -232,7 +232,7 @@
         try {
             if (currentPhase === "last") {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                await dbRef.child(nextUnit).set({ fase1: true });
+                await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
             } else if (currentPhase === "end") {
                 const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                 await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
