--- a/Level1/Unit1/Mixed Letters FIXO/index.html
+++ b/Level1/Unit1/Mixed Letters FIXO/index.html
@@ -231,12 +231,15 @@
 
         try {
             if (currentPhase === "last") {
+                // Cria uma nova Unit dentro do mesmo Level
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                 await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
             } else if (currentPhase === "end") {
+                // Cria um novo Level com Unit1
                 const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                 await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
             } else {
+                // Para fases normais, desbloqueia a próxima fase
                 const nextPhase = parseInt(currentPhase) + 1;
                 await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
             }
